Let server generate copyToMedia IVs
We include the IV in the encrypted payload, so we can let the server
choose them instead of the client